tweaked about styles and also fixed the search form on small screens

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -161,7 +161,8 @@ header div form {
 }
 input[name=q] {
 	border: none;
-	min-width: 400px;
+	min-width: 240px;
+	font-size: 10px;
 }
 
 header nav {
